--- a/package.json
+++ b/package.json
@@ -12,31 +12,32 @@
     "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.0",
     "axios": "^1.6.0",
     "date-fns": "^2.30.0",
-    "recharts": "^2.10.0",
+    "lucide-react": "^0.294.0",
+    "react": "^18.2.0",
     "react-big-calendar": "^1.8.0",
+    "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
-    "lucide-react": "^0.294.0"
+    "react-router-dom": "^6.20.0",
+    "recharts": "^2.10.0",
+    "serve": "^14.2.5"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.1.0",
+    "@testing-library/react": "^14.1.0",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@vitejs/plugin-react": "^4.2.1",
-    "vite": "^5.0.8",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8.54.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "tailwindcss": "^3.4.0",
+    "jsdom": "^23.0.0",
     "postcss": "^8.4.32",
-    "autoprefixer": "^10.4.16",
-    "@testing-library/react": "^14.1.0",
-    "@testing-library/jest-dom": "^6.1.0",
-    "vitest": "^1.0.0",
-    "jsdom": "^23.0.0"
+    "tailwindcss": "^3.4.0",
+    "vite": "^5.0.8",
+    "vitest": "^1.0.0"
   },
   "engines": {
     "node": ">=18.0.0"
